--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -40,7 +40,7 @@
 	"kv_namespaces": [
 		{
 			"binding": "TOKEN_STORE",
-			"id": "534c5e623d444d0e9ae656a0f04227cb"
+			"id": "someid"
 		}
 	]
 	/**
